added more riders. pics coming soon

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Get info of your favorite bmx riders.</h1>
+    <h2>Please use https://bmx-riders-api.herokuapp.com/api/</h2>
 </body>
 </html>
